--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "author": "Shreehari",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "axios": "^1.9.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.15.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
