--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,17 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon src/server.js"
   },
   "author": "Shreehari",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.15.2"
+    "mongoose": "^8.15.2",
+    "node-cron": "^4.1.0",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
