--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cron-parser": "^5.3.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.515.0",
     "next-themes": "^0.4.6",
